# Introduction-to-HPC

./: README.md
2_cluster_access/: README.md
4_parallel_programming/: CMakeLists.txt  make.sh  modules.sh
4_parallel_programming/jobs/: hostname.slurm  parameters.slurm  work.array.slurm  work.dependent.sh  work.parallel.slurm  work.sequential.slurm
4_parallel_programming/src/: mapping.cpp  parallel.cpp  threaded.cpp  work.cpp
5_gpu_accelerators/handson/: hello_world.solution.cu  hello_world.task.cu  vector_add.solution.cu  vector_add.task.cu  vector_scale.solution.cu  vector_scale.task.cu
